@@ -1,20 +1,19 @@
 package de.mephisto.vpin.commons;
 
-import edu.umd.cs.findbugs.annotations.NonNull;
-import edu.umd.cs.findbugs.annotations.Nullable;
+import de.mephisto.vpin.commons.utils.WinRegistry;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import de.mephisto.vpin.commons.utils.WinRegistry;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.StringWriter;
 import java.lang.invoke.MethodHandles;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Map;
 
 public class SystemInfoWindows {
@@ -164,7 +163,7 @@ public class SystemInfoWindows {
     if (StringUtils.isNotEmpty(vpx)) {
       int indexOf = vpx.toLowerCase().indexOf(".exe");
       if (indexOf > 0) {
-        String exe = StringUtils.removeStart(vpx.substring(0, indexOf + 4), "\"");
+        String exe = Strings.CI.removeStart(vpx.substring(0, indexOf + 4), "\"");
         File fexe = new File(exe);
         if (fexe.exists()) {
           return fexe;
@@ -185,12 +184,12 @@ public class SystemInfoWindows {
       String serverDllPath = extractRegistryValue(readRegistry(regkey, "CodeBase"));
       File serverDllFile = null;
       try {
-        serverDllFile = new File(new URL(serverDllPath).getFile());
+        serverDllFile = new File(URI.create(serverDllPath).toURL().getFile());
         if (serverDllFile.exists()) {
           return serverDllFile.getParentFile();
         }
       }
-      catch (MalformedURLException ue) {
+      catch (Exception ue) {
       }
 
       // alternative way copied from FrontendService
