@@ -21,7 +21,6 @@ import de.mephisto.vpin.server.system.DefaultPictureService;
 
 import org.apache.commons.configuration2.INIConfiguration;
 import org.apache.commons.configuration2.SubnodeConfiguration;
-import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -34,6 +33,7 @@ import java.io.*;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 import static de.mephisto.vpin.server.ini.IniUtil.safeGet;
 import static de.mephisto.vpin.server.ini.IniUtil.safeGetBoolean;
@@ -62,7 +62,7 @@ public class DMDPositionService {
 
   public DMDInfo getDMDInfo(int gameId) {
     Game game = gameService.getGame(gameId);
-    String rom = StringUtils.defaultString(game.getRomAlias(), game.getRom());
+    String rom = Objects.toString(game.getRomAlias(), game.getRom());
     String storeName = dmdDeviceIniService.getStoreName(game);
 
     DMDInfo dmdinfo = new DMDInfo();
@@ -380,9 +380,9 @@ public class DMDPositionService {
             // coordinates are in pixels, transform in screen coordinate
             factorX /= buffered.getWidth();
             factorY /= buffered.getHeight();
-            dmdinfo.setX((int) (position.get(0) * factorX + dmdinfo.getMargin()));
+            dmdinfo.setX((int) (position.getFirst() * factorX + dmdinfo.getMargin()));
             dmdinfo.setY((int) (position.get(1) * factorY + dmdinfo.getMargin()));
-            dmdinfo.setWidth((int) ((position.get(2) - position.get(0)) * factorX - 2 * dmdinfo.getMargin()));
+            dmdinfo.setWidth((int) ((position.get(2) - position.getFirst()) * factorX - 2 * dmdinfo.getMargin()));
             dmdinfo.setHeight((int) ((position.get(3) - position.get(1)) * factorY - 2 * dmdinfo.getMargin()));
           }
         }
@@ -402,7 +402,7 @@ public class DMDPositionService {
 
   public boolean saveDMDInfo(DMDInfo dmdinfo) {
     Game game = gameService.getGame(dmdinfo.getGameId());
-    String rom = StringUtils.defaultString(game.getRomAlias(), game.getRom());
+    String rom = Objects.toString(game.getRomAlias(), game.getRom());
     String storeName = dmdDeviceIniService.getStoreName(game);
 
     dmdinfo.setDmdStoreName(storeName);
@@ -510,7 +510,7 @@ public class DMDPositionService {
 
   private DMDInfoZone getMainZone(DMDInfo dmdinfo) {
     List<DMDInfoZone> zones = dmdinfo.getZones();
-    return zones.size() > 0 ? zones.get(0) : null;
+    return zones.size() > 0 ? zones.getFirst() : null;
   }
 
 
