@@ -153,7 +153,7 @@ public class IScoredSubscriptionsController extends BaseCompetitionController im
     if (value != null) {
       List<GameRepresentation> matches = value.getMatches();
       if (!matches.isEmpty()) {
-        NavigationController.navigateTo(NavigationItem.Tables, new NavigationOptions(matches.get(0).getId()));
+        NavigationController.navigateTo(NavigationItem.Tables, new NavigationOptions(matches.getFirst().getId()));
       }
     }
   }
@@ -164,7 +164,7 @@ public class IScoredSubscriptionsController extends BaseCompetitionController im
     if (value != null) {
       List<GameRepresentation> matches = value.getMatches();
       if (!matches.isEmpty()) {
-        GameRepresentation gameRepresentation = matches.get(0);
+        GameRepresentation gameRepresentation = matches.getFirst();
         if (gameRepresentation.isEventLogAvailable()) {
           TableDialogs.openEventLogDialog(gameRepresentation);
         }
@@ -178,7 +178,7 @@ public class IScoredSubscriptionsController extends BaseCompetitionController im
     if (value != null) {
       List<GameRepresentation> matches = value.getMatches();
       if (!matches.isEmpty()) {
-        TableDialogs.openTableDataDialog(null, matches.get(0));
+        TableDialogs.openTableDataDialog(null, matches.getFirst());
       }
     }
   }
@@ -241,7 +241,7 @@ public class IScoredSubscriptionsController extends BaseCompetitionController im
     }
 
     if (selections.size() == 1) {
-      IScoredGameRoomGameModel selection = selections.get(0);
+      IScoredGameRoomGameModel selection = selections.getFirst();
       String help2 = null;
       if (selection.iScoredGameRoom.isSynchronize()) {
         help2 = "IMPORTANT: The synchronization for this game room is enabled. So the competition will be re-created during the next synchronization!";
@@ -357,7 +357,7 @@ public class IScoredSubscriptionsController extends BaseCompetitionController im
 
     IScoredGameRoom value = gameRoomsCombo.getValue();
     List<IScoredGameRoom> gameRoomsComboValues = new ArrayList<>(validGameRooms);
-    gameRoomsComboValues.add(0, null);
+    gameRoomsComboValues.addFirst( null);
     gameRoomsCombo.setItems(FXCollections.observableList(gameRoomsComboValues));
 
     if (gameRoomsComboValues.contains(value)) {
@@ -368,7 +368,7 @@ public class IScoredSubscriptionsController extends BaseCompetitionController im
     }
     gameRoomsCombo.setDisable(validGameRooms.isEmpty());
     if (gameRoomsComboValues.size() > 1) {
-      gameRoomsCombo.setValue(validGameRooms.get(0));
+      gameRoomsCombo.setValue(validGameRooms.getFirst());
     }
 
     syncBtn.setDisable(gameRoomsCombo.getValue() == null);
@@ -590,7 +590,7 @@ public class IScoredSubscriptionsController extends BaseCompetitionController im
       @Override
       public Boolean call(TableView<IScoredGameRoomGameModel> gameRepresentationTableView) {
         if (!gameRepresentationTableView.getSortOrder().isEmpty()) {
-          TableColumn<IScoredGameRoomGameModel, ?> column = gameRepresentationTableView.getSortOrder().get(0);
+          TableColumn<IScoredGameRoomGameModel, ?> column = gameRepresentationTableView.getSortOrder().getFirst();
           if (column.equals(tableColumn)) {
             Collections.sort(tableView.getItems(), Comparator.comparing(o -> o.competition != null ? o.competition.getName() : null));
             if (column.getSortType().equals(TableColumn.SortType.DESCENDING)) {
@@ -721,7 +721,7 @@ public class IScoredSubscriptionsController extends BaseCompetitionController im
     if (model.isPresent()) {
       List<GameRepresentation> matches = newSelection.getMatches();
       if (!matches.isEmpty()) {
-        GameRepresentation gameRepresentation = matches.get(0);
+        GameRepresentation gameRepresentation = matches.getFirst();
         playButtonController.setDisable(false);
         playButtonController.setData(gameRepresentation);
         if (gameRepresentation.isEventLogAvailable()) {
@@ -768,7 +768,7 @@ public class IScoredSubscriptionsController extends BaseCompetitionController im
       if (getSelection().isPresent()) {
         IScoredGameRoomGameModel gameRoomGameModel = getSelection().get();
         if (!gameRoomGameModel.getMatches().isEmpty()) {
-          TableDialogs.openTableDataDialog(null, gameRoomGameModel.getMatches().get(0));
+          TableDialogs.openTableDataDialog(null, gameRoomGameModel.getMatches().getFirst());
         }
       }
     }
