@@ -1,7 +1,6 @@
 package de.mephisto.vpin.ui.tables;
 
 import de.mephisto.vpin.restclient.games.GameRepresentation;
-import de.mephisto.vpin.restclient.games.descriptors.DeleteDescriptor;
 import de.mephisto.vpin.ui.Studio;
 import de.mephisto.vpin.ui.events.EventManager;
 import de.mephisto.vpin.ui.util.ProgressModel;
@@ -9,7 +8,6 @@ import de.mephisto.vpin.ui.util.ProgressResultModel;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
@@ -23,7 +21,7 @@ public class AltSoundDeleteProgressModel extends ProgressModel<Integer> {
   public AltSoundDeleteProgressModel(GameRepresentation gameRepresentation) {
     super("ALTSound Deletion");
     this.gameRepresentation = gameRepresentation;
-    this.games = Arrays.asList(gameRepresentation.getId());
+    this.games = List.of(gameRepresentation.getId());
     this.gameIterator = games.iterator();
   }
 
